--- a/app.json
+++ b/app.json
@@ -16,17 +16,24 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.altateknolohiya.onetapalertffemobile"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.altateknolohiya.onetapalertffemobile"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "owner": "altateknolohiya"
+    "owner": "altateknolohiya",
+    "extra": {
+      "eas": {
+        "projectId": "f8d36238-4eff-4d71-8836-e4d197cf6263"
+      }
+    }
   }
 }
