--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "axios": "^1.1.3",
     "expo": "~46.0.16",
     "expo-camera": "~12.3.0",
+    "expo-location": "~14.3.0",
+    "expo-secure-store": "~11.3.0",
     "expo-status-bar": "~1.4.0",
     "moment": "^2.29.4",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-dotenv": "^3.3.1",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-maps": "0.31.1",
     "react-native-paper": "^5.0.0-rc.6",
+    "react-native-reanimated": "^2.11.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-step-indicator": "^1.0.3",
@@ -31,7 +36,7 @@
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.18.6"
   },
   "private": true
 }
