--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
-    "expo-notifications": "~0.16.1"
+    "expo-notifications": "~0.16.1",
+    "expo-keep-awake": "~10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6"
